[project]
name = "lunii-packs"
version = "0.0.0"
description = "CLI and helpers to inspect, export, and import Lunii storyteller packs"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Lunii" }]
dependencies = [
  "click>=8.1.7",
  "tqdm>=4.66",
  "psutil>=5.9.7,<6.0",
  "py7zr==0.22.0",
  "xxtea>=3.2.0,<4.0",
  "requests>=2.31.0,<3.0",
  "pycryptodome==3.20.0",
  "pillow>=10.2.0,<11.0",
  "mutagen>=1.47.0,<2.0",
  "ffmpeg-python>=0.2.0",
  "hexdump>=3.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23.0",
  "black>=24.10.0",
  "ruff>=0.6.8",
  "mypy>=1.11.0",
  "pyright>=1.1.386",
  "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
py-modules = ["lunii_logging", "test_api"]
script-files = ["src/lunii-pm.py"]

[tool.black]
line-length = 200
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 200
indent-width = 4
target-version = "py313"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
